--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "start": "node build/index.js",
     "start:dev": "tsnd source/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "discord.js": "^13.6.0",
+    "discordx": "^9.1.10",
+    "glob": "^7.2.0"
+  },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
