--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
   "author": "Maurício Braz Gonçalves <82123955+mauriciobraz@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "start": "node build/index.js",
-    "start:dev": "tsnd source/index.ts"
+    "start": "ts-node -r tsconfig-paths/register source/index.ts"
   },
   "dependencies": {
     "discord.js": "^13.6.0",
     "discordx": "^9.1.10",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
-    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
 }
