--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
-node_modules
-build
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Prisma SQLite files
+prisma/data
+*.sqlite3
+*.sqlite
+*.db
+
+# Typescript transpilation folders
+build
+dist
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
