--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discordx": "^9.1.10",
     "glob": "^7.2.0",
     "prisma": "^3.8.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
