create a decancer member nickname slash command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "~/*": ["source/*"],
       "@constants/*": ["source/constants/*"],
       "@guards/*": ["source/client/guards/*"],
+      "@helpers/*": ["source/helpers/*"],
       "@errors": ["source/client/errors.ts"]
     },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
