--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "@prisma/client": "3.8.1",
+    "@types/latinize": "^0.2.15",
     "discord.js": "^13.6.0",
     "discordx": "^9.1.10",
     "glob": "^7.2.0",
+    "latinize": "^0.5.0",
     "prisma": "^3.8.1",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.4.0"
+    "remove-accents": "^0.4.2",
+    "ts-node": "^10.4.0",
+    "unidecode": "^0.1.8",
+    "unorm": "^1.6.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
+    "@types/unidecode": "^0.1.1",
+    "@types/unorm": "^1.3.28",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
