--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "author": "Maurício Braz Gonçalves <82123955+mauriciobraz@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint . --ext .ts",
     "start": "ts-node -r tsconfig-paths/register source/index.ts"
   },
   "dependencies": {
     "@prisma/client": "3.8.1",
     "@types/latinize": "^0.2.15",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "discord.js": "^13.6.0",
     "discordx": "^9.1.10",
+    "eslint": "^8.7.0",
     "glob": "^7.2.0",
     "latinize": "^0.5.0",
     "prisma": "^3.8.1",
@@ -26,6 +30,8 @@
     "@types/glob": "^7.2.0",
     "@types/unidecode": "^0.1.1",
     "@types/unorm": "^1.3.28",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
